--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -3,7 +3,7 @@
       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
           <div class="navbar-wrapper">
-            <a class="navbar-brand" href="#pablo">Material Dashboard</a>
+            <a class="navbar-brand" href="#pablo">Administración</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
@@ -17,7 +17,7 @@
 
             <form class="navbar-form">
               <div class="input-group no-border">
-                <input type="text" value="" class="form-control" placeholder="Search...">
+                <input type="text" value="" class="form-control" placeholder="Buscar...">
                 <button type="submit" class="btn btn-white btn-round btn-just-icon">
                   <i class="material-icons">search</i>
                   <div class="ripple-container"></div>
@@ -57,9 +57,9 @@
                   </p>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                  <a class="dropdown-item" href="/page-user.html">Profile</a>
+                  <a class="dropdown-item" href="/page-user.html">Perfil</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'authentication:logout' %}" >Log out</a>
+                  <a class="dropdown-item" href="{% url 'authentication:logout' %}" >Cerrar sesión</a>
                 </div>
               </li>
             </ul>
