--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -5,12 +5,18 @@
         Tip 2: you can also add an image using data-image tag
       -->
       <div class="logo">
-        <a href={% url 'home:home' %} class="simple-text logo-normal">Home</a>
+        <a href={% url 'home:home' %} class="simple-text logo-normal">Inicio</a>
       </div>
       <div class="sidebar-wrapper">
         <ul class="nav">
         {% if request.user.is_authenticated %}
 
+          <li class="nav-item {% if 'form' in segment %} active {% endif %}">
+            <a class="nav-link" href="{% url 'home:form' %}" >
+              <i class="material-icons">content_paste</i>
+              <p>Formulario</p>
+            </a>
+          </li>
           <li class="nav-item {% if 'index' in segment %} active {% endif %}">
             <a class="nav-link" href="/">
               <i class="material-icons">dashboard</i>
@@ -51,12 +57,6 @@
             <a class="nav-link" href="/ui-notifications.html">
               <i class="material-icons">notifications</i>
               <p>Notifications</p>
-            </a>
-          </li>
-          <li class="nav-item {% if 'example' in segment %} active {% endif %}">
-            <a class="nav-link" href="{% url 'home:example' %}" >
-              <i class="material-icons">directions_run</i>
-              <p>Example</p>
             </a>
           </li>
           <li class="nav-item ">
