--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -15,7 +15,7 @@
           <div class="collapse navbar-collapse justify-content-end">
           {% if request.user.is_authenticated %}
 
-            <form class="navbar-form">
+            {% comment %} <form class="navbar-form">
               <div class="input-group no-border">
                 <input type="text" value="" class="form-control" placeholder="Buscar...">
                 <button type="submit" class="btn btn-white btn-round btn-just-icon">
@@ -23,17 +23,17 @@
                   <div class="ripple-container"></div>
                 </button>
               </div>
-            </form>
+            </form> {% endcomment %}
             <ul class="navbar-nav">
-              <li class="nav-item">
+              {% comment %} <li class="nav-item">
                 <a class="nav-link" href="#pablo">
                   <i class="material-icons">dashboard</i>
                   <p class="d-lg-none d-md-block">
                     Stats
                   </p>
                 </a>
-              </li>
-              <li class="nav-item dropdown">
+              </li> {% endcomment %}
+              {% comment %} <li class="nav-item dropdown">
                 <a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="material-icons">notifications</i>
                   <span class="notification">5</span>
@@ -48,7 +48,7 @@
                   <a class="dropdown-item" href="#">Another Notification</a>
                   <a class="dropdown-item" href="#">Another One</a>
                 </div>
-              </li>
+              </li> {% endcomment %}
               <li class="nav-item dropdown">
                 <a class="nav-link" href="#pablo" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="material-icons">person</i>
