--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -22,6 +22,9 @@
   <link href={% static "/assets/css/material-dashboard.css?v=2.1.2" %} rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href={% static "/assets/demo/demo.css" %} rel="stylesheet" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+
 
   <!-- Specific Page CSS goes HERE  -->
   {% block stylesheets %}{% endblock stylesheets %}
