--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -24,7 +24,8 @@
   <link href={% static "/assets/demo/demo.css" %} rel="stylesheet" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-
+  <!-- Specific Page CSS goes HERE  -->
+  <link rel="stylesheet" href={% static 'assets/css/main.css' %}>
 
   <!-- Specific Page CSS goes HERE  -->
   {% block stylesheets %}{% endblock stylesheets %}
