--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -2,14 +2,18 @@
     height: calc(100vh - 68px);
 }
 
+.main-panel > .content {
+    padding: 0 15px 30px 15px;
+}
+
 .card-body.main-card {
-    min-height: calc(62vh - 0px);
+    min-height: calc(68vh - 0px);
     position: relative;
 }
 
-.card-body form {
+/* .card-body form {
     height: 100%;
-}
+} */
 
 .tab-content {
     height: 100%;
@@ -24,20 +28,20 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background-color: rgb(248, 248, 182);
+    /* background-color: rgb(248, 248, 182); */
     min-height: 41vh;
     margin-top: 20px;
 }
 
-.fetch-form {
-    /* position: relative;
+/* .fetch-form {
+    position: relative;
     border: 1px solid black;
     padding: 60px 15px 0 15px;
-    background-color: thistle;
-    border-radius: 9px; */
+    background-color: #0d6efd;
+    border-radius: 9px;
 
     height: 37vh;
-}
+} */
 
 .fetch-form-header {
     position: absolute;
@@ -59,8 +63,29 @@
     margin: auto 0;
 }
 
+.fetch-form.card {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.fetch-form [class*="card-header-"]:not(.card-header-icon):not(.card-header-text):not(.card-header-image) {
+    padding: 6px;
+}
+
+.fetch-form .card-header .card-title {
+    margin-bottom: 0;
+
+
+}
+
 .fetch-form .card-body {
-    max-height: 30vh;
+    display: flex;
+    flex-direction: column;
+    /* height: 30vh; */
+}
+
+#diagnostic-form-page {
+    height: 40vh;
 }
 
 .fetch-control-button {
@@ -72,12 +97,19 @@
     margin: 10px 19px;
 }
 
-.danger {
-    background-color: rgb(87, 64, 218);
+button.secondary {
+    background-color: rgb(144 180 191);
+    color: white;
 }
 
-.success {
+button.primary {
+    background-color: #0d6efd;
+    color: white;
+}
+
+button.success {
     background-color: rgb(90, 69, 182);
+    color: white;
 }
 
 .form-field {
@@ -101,7 +133,7 @@
 .form-field:has(textarea) {
     height: 80px;
     margin-top: 30px;
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
 }
 
 .form-field:has(textarea) label {
@@ -126,6 +158,26 @@
 
 .form-field input:focus ~ label{
     transform: translateY(-90%);
+}
+
+.form-field:has(.detected-as-invalid) {
+    border: 1px solid #e79e9e;
+    border-radius: 4px;
+}
+
+.detected-as-invalid {
+    background-color: #e79e9e;
+    position: absolute;
+    right: 0;
+    top: 54px;
+    width: 100%;
+    min-height: 33px;
+    z-index: 1;
+    border-radius: 4px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .submitting-button {
@@ -162,8 +214,10 @@
     border-width: 3px;
 }
 
-.abort-evolution-button {
+.abort-accordion-field-button {
     border: none;
-    width: 300px;
+    width: 110px;
     border-radius: 4px;
+    height: 30px;
+    margin: 10px 19px;
 }
