--- a/templates/home/form.html
+++ b/templates/home/form.html
@@ -4,7 +4,9 @@
 {% block content %}
 
   <div class="row">
-    <button id="test-button">test</button>
+    {% comment %} <button id="test-button">test</button> {% endcomment %}
+    {% comment %} <div class="alert-danger">this is a danger notification</div> {% endcomment %}
+
     <div class="col-md-12">
       <div class="card">
         <div class="card-header card-header-primary">
@@ -12,32 +14,6 @@
           <p class="card-category">Completa la historia clínica</p>
         </div>
         <div class="card-body main-card">
-
-          {% comment %} <div class="d-flex justify-content-center">
-            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-              <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-demograficos" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Demográficos</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-acompanante" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Acompañante</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-habitos" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Hábitos</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-clinica" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Historia clínica</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-diagnostico" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Diagnóstico</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-evolucion" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Evolución</button>
-              </li>
-              <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-test" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Test</button>
-              </li>
-            </ul>
-          </div> {% endcomment %}
 
 
           <div class="d-flex justify-content-center">
@@ -66,13 +42,14 @@
             </ul>
           </div>
 
-          <form action="" method="post" enctype="multipart/form-data">
+          <form id="main-form" action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
+
             <div class="tab-content" id="pills-tabContent">
               <div class="tab-pane fade show active" id="pills-demograficos" role="tabpanel" aria-labelledby="pills-demograficos-tab" tabindex="0">
                 
                 <div class="form-section-container">
-            
+                  
                   <div class="row">
 
                     <div class="col-md-4">
@@ -106,6 +83,7 @@
                         <label for={{ patient_form.fecha_nacimiento.id_for_label }}>{{ patient_form.fecha_nacimiento.label }}</label>
                         {{ patient_form.fecha_nacimiento }}
                       </div>
+                      <input type="date" value={{ patient_form.fecha_nacimiento.value }}>
                     </div>
       
                     <div class="col-md-4">
@@ -249,8 +227,8 @@
                     </div>
 
                     <div class="col-md-6">
-                      <label for={{ patient_form.adjuntar_documento.id_for_label }} for={{ patient_form.adjuntar_documento.id_for_label }}>{{ patient_form.adjuntar_documento.label }}</label>
-                      {{ patient_form.adjuntar_documento }}
+                      <label for={{ patient_form.documento_adjunto.id_for_label }} for={{ patient_form.documento_adjunto.id_for_label }}>{{ patient_form.documento_adjunto.label }}</label>
+                      {{ patient_form.documento_adjunto }}
                     </div>
 
                   </div>
@@ -312,25 +290,17 @@
                       
                           <div class="col-md-3">
                             <div class="form-field">
-                              <label for={{ diagnostic_form.code.id_for_label }}>{{ diagnostic_form.code.label }}</label>
-                              {{ diagnostic_form.code }}
+                              <label for={{ diagnostic_form.diagnostic_code.id_for_label }}>{{ diagnostic_form.diagnostic_code.label }}</label>
+                              {{ diagnostic_form.diagnostic_code }}
                             </div>
                           </div>
     
                           <div class="col-md-9">
                             <div class="form-field">
-                              <label for={{ diagnostic_form.description.id_for_label }}>{{ diagnostic_form.description.label }}</label>
-                              {{ diagnostic_form.description }}
+                              <label for={{ diagnostic_form.diagnostic_description.id_for_label }}>{{ diagnostic_form.diagnostic_description.label }}</label>
+                              {{ diagnostic_form.diagnostic_description }}
                             </div>
                           </div>
-    
-                          {% comment %} <div class="col-md-3">
-                            <div class="form-field">
-                              <label for={{ diagnostic_form.is_active.id_for_label }}>{{ diagnostic_form.is_active.label }}</label>
-                              <input type="hidden" name='is_active'>
-                              {{ diagnostic_form.is_active }}
-                            </div>
-                          </div> {% endcomment %}
     
                         </div>
 
@@ -379,7 +349,7 @@
                             </h2>
                             <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                               <div class="accordion-body">
-                                {{ record.evolucion }}
+                                {{ record.evolution_record }}
                               </div>
                             </div>
                           </div>
@@ -417,9 +387,8 @@
 
                           <div class="col-md-12">
                             <div class="form-field">
-                              <label for={{ evolution_form.evolucion.id_for_label }}>{{ evolution_form.evolucion.label }}</label>
-                              {{ evolution_form.evolucion }}
-                              {% comment %} <textarea name="evolucion" id="id_evolucion" cols="30" rows="3"></textarea> {% endcomment %}
+                              <label for={{ evolution_form.evolution_record.id_for_label }}>{{ evolution_form.evolution_record.label }}</label>
+                              {{ evolution_form.evolution_record }}
                             </div>
                           </div>
   
@@ -464,7 +433,7 @@
                             </h2>
                             <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                               <div class="accordion-body">
-                                {{ patient_test.resultado }}
+                                {{ patient_test.result }}
                               </div>
                             </div>
                           </div>
@@ -519,8 +488,8 @@
                           <div class="col-md-12">
 
                             <div class="form-field">
-                              <label for={{ patient_test_form.resultado.id_for_label }}>{{ patient_test_form.resultado.label }}</label>
-                              {{ patient_test_form.resultado }}
+                              <label for={{ patient_test_form.result.id_for_label }}>{{ patient_test_form.result.label }}</label>
+                              {{ patient_test_form.result }}
                             </div>
 
                           </div>
@@ -561,8 +530,8 @@
                           <div class="col-md-4">
       
                             <div class="form-field">
-                              <label for={{ test_form.nombre.id_for_label }}>{{ test_form.nombre.label }}</label>
-                              {{ test_form.nombre }}
+                              <label for={{ test_form.test_name.id_for_label }}>{{ test_form.test_name.label }}</label>
+                              {{ test_form.test_name }}
                             </div>
       
                           </div>
@@ -570,8 +539,8 @@
                           <div class="col-md-8">
       
                             <div class="form-field">
-                              <label for={{ test_form.descripcion.id_for_label }}>{{ test_form.descripcion.label }}</label>
-                              {{ test_form.descripcion }}
+                              <label for={{ test_form.test_description.id_for_label }}>{{ test_form.test_description.label }}</label>
+                              {{ test_form.test_description }}
                             </div>
       
                           </div>
@@ -583,8 +552,8 @@
                           <div class="col-md-4">
       
                             <div class="form-field">
-                              <label for={{ test_form.categoria.id_for_label }}>{{ test_form.categoria.label }}</label>
-                              {{ test_form.categoria }}
+                              <label for={{ test_form.category.id_for_label }}>{{ test_form.category.label }}</label>
+                              {{ test_form.category }}
                             </div>
       
                           </div>
@@ -592,8 +561,8 @@
                           <div class="col-md-4">
       
                             <div class="form-field">
-                              <label for={{ test_form.subcategoria.id_for_label }}>{{ test_form.subcategoria.label }}</label>
-                              {{ test_form.subcategoria }}
+                              <label for={{ test_form.subcategory.id_for_label }}>{{ test_form.subcategory.label }}</label>
+                              {{ test_form.subcategory }}
                             </div>
       
                           </div>
@@ -601,8 +570,8 @@
                           <div class="col-md-4">
       
                             <div class="form-field">
-                              <label for={{ test_form.tipo_resultado.id_for_label }}>{{ test_form.tipo_resultado.label }}</label>
-                              {{ test_form.tipo_resultado }}
+                              <label for={{ test_form.result_type.id_for_label }}>{{ test_form.result_type.label }}</label>
+                              {{ test_form.result_type }}
                             </div>
       
                           </div>
@@ -632,116 +601,6 @@
                   </div>
 
                 </div>
-
-                
-
-
-                {% comment %} <div class="row">
-
-                  <div class="accordion" id="accordionExample">
-                    {% for patient_test in patient_tests %}
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapseOne">
-                          {{ patient_test }}
-                        </button>
-                      </h2>
-                      <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          {{ patient_test.result }}
-                        </div>
-                      </div>
-                    </div>
-                    {% endfor %}
-                  </div>
-
-                  <div class="col-md-12">
-                    
-                    <div class="form-field">
-                      <button id="patient-test-form-displayer">
-                        Agregar test hehe
-                      </button>
-                      <label for={{ form.diagnostico.id_for_label }}>{{ form.diagnostico.label }}</label>
-                      {{ form.diagnostico }}
-                    </div>
-                  </div>
-
-                  <div id="patient-test-form-container" class="d-none">
-
-                    <div class="row">
-
-                      <div class="col-md-6">
-
-                        <div class="form-field">
-                          <label for={{ patient_test_form.test.id_for_label }}>{{ patient_test_form.test.label }}</label>
-                          {{ patient_test_form.test }}
-                        </div>
-
-                        <button id="test-form-displayer">
-                          Crear test
-                        </button>
-
-                        <div id="test-form-container">
-
-                          <div class="row">
-                            <div class="col-md-6">
-                              <div class="form-field">
-                                <label for={{ test_form.nombre.id_for_label }}>{{ test_form.nombre.label }}</label>
-                                {{ test_form.nombre }}
-                              </div>
-
-                            </div>
-                            <div class="col-md-6">
-                              <div class="form-field">
-                                <label for={{ test_form.tipo_resultado.id_for_label }}>{{ test_form.tipo_resultado.label }}</label>
-                                {{ test_form.tipo_resultado }}
-                              </div>
-                              
-                            </div>
-                          </div>
-
-                          <div class="row">
-                            <div class="col-md-12">
-                              <div class="form-field">
-                                <label for={{ test_form.descripcion.id_for_label }}>{{ test_form.descripcion.label }}</label>
-                                {{ test_form.descripcion }}
-                              </div>
-
-                            </div>
-                          </div>
-
-                          <div class="row">
-                            <div class="col-md-6">
-                              <div class="form-field">
-                                <label for={{ test_form.categoria.id_for_label }}>{{ test_form.categoria.label }}</label>
-                                {{ test_form.categoria }}
-                              </div>
-
-                            </div>
-                            <div class="col-md-6">
-                              <div class="form-group">
-                                <label for={{ test_form.subcategoria.id_for_label }}>{{ test_form.subcategoria.label }}</label>
-                                {{ test_form.subcategoria }}
-                              </div>
-                              
-                            </div>
-                          </div>
-
-                        </div>
-                      </div>
-                      
-                      <div class="col-md-6">
-                        <div class="form-group">
-                          <label for={{ patient_test_form.resultado.id_for_label }}>{{ patient_test_form.resultado.label }}</label>
-                          {{ patient_test_form.resultado }}
-                        </div>
-                      </div>
-
-                    </div>
-
-                  </div>
-
-                </div> {% endcomment %}
                 
               </div>
             </div>
@@ -760,12 +619,7 @@
 {% endblock content %}
 
 {% block javascripts %}
-{% comment %} <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script> {% endcomment %}
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-
 <!-- Page specific JavaScript -->
-{% comment %} {{ js_variables|json_script:'js-variables' }} {% endcomment %}
 <script type="text/javascript" src={% static 'assets/js/form.js' %}></script>
 {% endblock javascripts %}
