--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -182,6 +182,7 @@ input[type="file"] {
     align-content: center;
     justify-content: center;
     flex-wrap: wrap;
+    border-radius: 0 0 4px 4px;
 }
 
 .submitting-button {
@@ -224,4 +225,110 @@ input[type="file"] {
     border-radius: 4px;
     height: 30px;
     margin: 10px 19px;
+}
+
+/*--------------------------- Search input -----------------------------*/
+
+.select-search-wrapper div:nth-child(1) button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    background: none;
+    border: 1px solid #bbbbbb;
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+}
+
+.select-search-wrapper div:nth-child(1) button div {
+    padding-left: 7px;
+}
+
+.select-search-wrapper div:nth-child(1) button svg {
+    transform: scale(0.65);
+}
+
+.search-container {
+    padding: 9px;
+    width: 100%;
+    border: 1px solid #bbbbbb;
+    border-radius: 4px;
+}
+
+.search-input-header {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.search-container div:nth-child(1) svg {
+    transform: scale(0.6);
+    position: absolute;
+    left: 4px;
+    top: 4px;
+}
+
+.search-container input {
+    width: 100%;
+    border: 1px solid #bbbbbb;
+    border-radius: 2px;
+    height: 30px;
+    padding: 0 20px 0 30px;
+    margin-bottom: 15px;
+}
+
+.option-container ul {
+    padding: 0;
+    max-height: 150px;
+    overflow-y: auto;
+    margin: 0;
+}
+
+.options-container ul::-webkit-scrollbar {
+    width: 7px;
+}
+
+.option-container ul li {
+    height: 30px;
+    width: calc(100% - 15px);
+    cursor: pointer;
+    padding: 0 15px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+}
+
+.option-container ul li:hover {
+    background-color: rgb(238, 238, 238);
+}
+
+
+
+
+.select-search-wrapper {
+    color: black;
+}
+
+.select-search-wrapper ul {
+    list-style-type: none;
+}
+
+.select-search-wrapper  li {
+    text-decoration: none;
+}
+
+/*--------------------------- Patient list -----------------------------*/
+
+.frame {
+    height: 65vh;
+    border: 1px solid red;
+    overflow: auto;
+}
+
+.patient-list-container {
+    min-height: calc(100vh - 265px);
 }
