--- a/templates/home/form.html
+++ b/templates/home/form.html
@@ -266,6 +266,43 @@
                           </div>
 
                         </div>
+
+                        <div class="row">
+                          <div class="col-md-10 col-sm-10 col-9">
+                            <div class="select-search-wrapper">
+                              <div>
+                                <button id="diagnostic-select">
+                                  <div>Seleccionar</div>
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                                    <path d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z"/>
+                                  </svg>
+                                </button>
+                              </div>
+                              <div class="search-container">
+                                <div class="search-input-header">
+                                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="11" cy="11" r="8"/>
+                                    <line x1="21" y1="21" x2="16.65" y2="16.65"/>
+                                  </svg>
+                                  <input class="search-input" type="search" placeholder="Buscar...">
+                                </div>
+                                
+                                <div class="option-container">
+                                  <ul>
+                                    <li>Hello motherfucker</li>
+                                    <li>Hello </li>
+                                    <li>Hello motherfucker Hello motherfucker Hello motherfucker</li>
+                                    <li>Hello motherfucker motherfucker motherfucker</li>
+                                    <li>Hello motherfucker motherfucker</li>
+                                    <li>Hello motherfucker</li>
+                                    <li>Hello motherfucker</li>
+                                  </ul>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
                       </div>
 
                       <div class="col-md-2">
