--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -15,7 +15,7 @@
           <div class="collapse navbar-collapse justify-content-end">
           {% if request.user.is_authenticated %}
 
-            {% comment %} <form class="navbar-form">
+            <form class="navbar-form d-none">
               <div class="input-group no-border">
                 <input type="text" value="" class="form-control" placeholder="Buscar...">
                 <button type="submit" class="btn btn-white btn-round btn-just-icon">
@@ -23,7 +23,7 @@
                   <div class="ripple-container"></div>
                 </button>
               </div>
-            </form> {% endcomment %}
+            </form>
             <ul class="navbar-nav">
               {% comment %} <li class="nav-item">
                 <a class="nav-link" href="#pablo">
