--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -11,37 +11,21 @@
     position: relative;
 }
 
-/* .card-body form {
-    height: 100%;
-} */
-
 .tab-content {
     height: 100%;
 }
 
-.card-body form .tab-pane {
-    /* min-height: 60vh; */
+/* .card-body form .tab-pane {
     color: aliceblue;
-}
+} */
 
 .form-section-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    /* background-color: rgb(248, 248, 182); */
     min-height: 41vh;
     margin-top: 20px;
 }
-
-/* .fetch-form {
-    position: relative;
-    border: 1px solid black;
-    padding: 60px 15px 0 15px;
-    background-color: #0d6efd;
-    border-radius: 9px;
-
-    height: 37vh;
-} */
 
 .fetch-form-header {
     position: absolute;
@@ -74,7 +58,6 @@
 
 .fetch-form .card-header .card-title {
     margin-bottom: 0;
-
 
 }
 
@@ -137,20 +120,11 @@ input[type="file"] {
 .form-field:has(textarea) {
     height: 80px;
     margin-top: 30px;
-    /* background-color: aliceblue; */
 }
 
 .form-field:has(textarea) label {
     bottom: 63px;
 }
-
-/* .form-field select {
-    background: transparent;
-    margin-bottom: 8px;
-    border: none;
-    border-bottom: 2px solid rgba(156, 39, 176, 0.9);
-    width: 100%;
-} */
 
 .form-field label {
     position: absolute;
@@ -165,19 +139,17 @@ input[type="file"] {
 }
 
 .form-field:has(.detected-as-invalid) {
-    border: 1px solid #e79e9e;
-    border-radius: 4px;
+    border-top: 1px solid #ff9e0f;
 }
 
 .detected-as-invalid {
-    background-color: #e79e9e;
+    background-color: #ff9e0f;
     position: absolute;
     right: 0;
     top: 54px;
     width: 100%;
-    min-height: 33px;
+    min-height: 29px;
     z-index: 1;
-    border-radius: 4px;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -229,11 +201,10 @@ input[type="file"] {
 
 /*--------------------------- Search input -----------------------------*/
 
-.select-search-wrapper div:nth-child(1) button {
+.select-diagnostic button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
     background: none;
     border: 1px solid #bbbbbb;
     border-radius: 4px;
@@ -241,19 +212,34 @@ input[type="file"] {
     height: 40px;
 }
 
-.select-search-wrapper div:nth-child(1) button div {
+.select-diagnostic button div {
     padding-left: 7px;
+    width: calc(100% - 10px);
+    white-space: nowrap;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    text-align: start;
 }
 
-.select-search-wrapper div:nth-child(1) button svg {
-    transform: scale(0.65);
+.select-diagnostic button svg {
+    transition: .3s;
+}
+
+.select-diagnostic button svg.active {
+    transform: rotate(180deg);
 }
 
 .search-container {
+    display: none;
+    margin-top: 16px;
     padding: 9px;
     width: 100%;
     border: 1px solid #bbbbbb;
     border-radius: 4px;
+}
+
+.search-container.active {
+    display: block;
 }
 
 .search-input-header {
@@ -275,51 +261,58 @@ input[type="file"] {
     border-radius: 2px;
     height: 30px;
     padding: 0 20px 0 30px;
-    margin-bottom: 15px;
 }
 
 .option-container ul {
     padding: 0;
-    max-height: 150px;
-    overflow-y: auto;
-    margin: 0;
-}
-
-.options-container ul::-webkit-scrollbar {
-    width: 7px;
+    max-height: 120px;
+    overflow: scroll;
+    margin: 10px 0 0 0;
 }
 
 .option-container ul li {
     height: 30px;
-    width: calc(100% - 15px);
+    width: calc(100% - 24px);
     cursor: pointer;
     padding: 0 15px;
     border-radius: 4px;
     display: flex;
     align-items: center;
     white-space: nowrap;
-    overflow-x: hidden;
-    text-overflow: ellipsis;
 }
 
 .option-container ul li:hover {
     background-color: rgb(238, 238, 238);
 }
 
-
-
-
 .select-search-wrapper {
     color: black;
 }
 
-.select-search-wrapper ul {
-    list-style-type: none;
-}
+.option-container ul::-webkit-scrollbar{
+    width: 9px;
+    height: 9px;
+  }
+  .option-container ul::-webkit-scrollbar-track{
+    background: #f1f1f1;
+    border-radius: 25px;
+  }
+  .option-container ul::-webkit-scrollbar-thumb{
+    background: #ccc;
+    border-radius: 25px;
+  }
+  .option-container ul::-webkit-scrollbar-thumb:hover{
+    background: #b3b3b3;
+  }
 
-.select-search-wrapper  li {
+
+/* .select-search-wrapper ul {
+    list-style-type: none;
+} */
+
+/* .select-search-wrapper  li {
     text-decoration: none;
-}
+} */
 
 /*--------------------------- Patient list -----------------------------*/
 
