--- a/templates/home/patient_list.html
+++ b/templates/home/patient_list.html
@@ -23,26 +23,29 @@
                                 {% comment %} <div class="tab-pane fade show active d-none" id="pills-100" role="tabpanel" aria-labelledby="pills-100-tab" tabindex="0"> {% endcomment %}
                                   
                                     <table class="table table-hover mb-0">
-                                        <thead>
-                                            <th>
-                                                Cédula
-                                            </th>
-                                            <th>
-                                                Nombre
-                                            </th>
-                                            <th>
-                                                Apellidos
-                                            </th>
-                                            <th>
-                                                Teléfono
-                                            </th>
-                                            <th>
-                                                Última actualización
-                                            </th>
-                                            <th>
-                                                Link
-                                            </th>
-                                        </thead>
+                                        
+                                        <template id="head-template">
+                                            <thead class="text-primary">
+                                                <th>
+                                                    Cédula
+                                                </th>
+                                                <th>
+                                                    Nombre
+                                                </th>
+                                                <th>
+                                                    Apellidos
+                                                </th>
+                                                <th>
+                                                    Teléfono
+                                                </th>
+                                                <th>
+                                                    Última actualización
+                                                </th>
+                                                <th>
+                                                    Link
+                                                </th>
+                                            </thead>
+                                        </template>
 
                                     </table>
                     
