--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -35,6 +35,34 @@
 <body class="">
   <div class="wrapper ">
 
+
+    <!-- Messages -->
+
+    {% if messages %}
+
+      {% for message in messages %}
+      <div data-notify="container" class="col-11 col-md-4 alert {% if message.tags %} alert-{{message.tags}} {% endif %} 
+      alert-with-icon animated fadeInDown" role="alert" data-notify-position="top-center" 
+      style="display: inline-block; margin: 15px auto; position: absolute; 
+      transition: all 0.5s ease-in-out 0s; z-index: 1031; top: 20px; left: 0px; right: 0px;">
+        <button type="button" aria-hidden="true" class="close" data-notify="dismiss" 
+        style="position: absolute; right: 10px; top: 50%; margin-top: -9px; z-index: 1033;">
+          <i class="material-icons">close</i>
+        </button>
+        <i data-notify="icon" class="material-icons">add_alert</i>
+        <span data-notify="title"></span> 
+        <span data-notify="message">
+          {% autoescape off %}
+          {{ message }}
+          {% endautoescape %}
+        </span>
+        <a href="#" target="_blank" data-notify="url"></a>
+      </div>
+      {% endfor %}
+
+      <script src={% static 'assets/js/messages.js' %}></script>
+    {% endif %}
+
     {% include 'includes/sidebar.html' %}
 
     <div class="main-panel">
@@ -43,6 +71,9 @@
 
       <!-- End Navbar -->
       <div class="content">
+
+        
+
         <div class="container-fluid">
 
           {% block content %}{% endblock content %}
